update note repo add note queryService
