# docs/swagger.json
@@ -10,6 +10,49 @@
     "basePath": "/",
     "paths": {
         "/api/notes": {
+            "get": {
+                "description": "Все заметки пользователя",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Notes"
+                ],
+                "summary": "GetAllUserNotes",
+                "parameters": [
+                    {
+                        "type": "boolean",
+                        "description": "Фильтр публичных заметок",
+                        "name": "public",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/noteshandlers.GetAllResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "создание Note",
                 "consumes": [
@@ -38,6 +81,52 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.Note"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/api/notes/public/{page}": {
+            "get": {
+                "description": "Получение всех публичных заметок с постраничной пагинацией",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Notes"
+                ],
+                "summary": "GetAllPublic",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Номер страницы (начиная с 1)",
+                        "name": "page",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/noteshandlers.GetAllPublicResponse"
                         }
                     },
                     "400": {
@@ -497,6 +586,9 @@
                 "id": {
                     "type": "integer"
                 },
+                "is_public": {
+                    "type": "boolean"
+                },
                 "title": {
                     "type": "string"
                 },
@@ -530,6 +622,28 @@
             "properties": {
                 "id": {
                     "type": "integer"
+                }
+            }
+        },
+        "noteshandlers.GetAllPublicResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Note"
+                    }
+                }
+            }
+        },
+        "noteshandlers.GetAllResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Note"
+                    }
                 }
             }
         },
