# internal/model/Note.go
@@ -8,6 +8,7 @@ type Note struct {
 	Title     string    `gorm:"size:255;not null" json:"title"`
 	Content   string    `gorm:"type:text;not null" json:"content"`
 	Color     string    `gorm:"size:255" json:"color"`
+	IsPublic  bool      `gorm:"default:false;not null" json:"is_public"`
 	CreatedAt time.Time `gorm:"autoCreateTime" json:"created_at"`
 	UpdatedAt time.Time `gorm:"autoUpdateTime" json:"updated_at"`
 
