# internal/presentation/routes/note_routes/note_routes.go
@@ -19,8 +19,14 @@ func NoteRoutes(
 	noteRepo := repository.NewNoteRepo(db)
 	basicHandlers := noteshandlers.NewBasicNotesCrudHandlers(noteRepo)
 
+	noteQueryService := repository.NewNoteQueryService(db)
+	queryServiceHandler := noteshandlers.NewQueryServiceHandler(noteQueryService)
+
+	r.GET("/notes/public/:page", queryServiceHandler.GetAllPublic) // GetAllPublic
+
 	// ---======= protected routes
 	protected.POST("/notes", basicHandlers.Create)       // Create
+	protected.GET("/notes", basicHandlers.GetAll)        // GetAll
 	protected.PATCH("/notes/:id", basicHandlers.Update)  // Update
 	protected.GET("/notes/:id", basicHandlers.GetByID)   // GetById
 	protected.DELETE("/notes/:id", basicHandlers.Delete) // Delete
